[project]
name = "read-later"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<4.0"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "feedparser>=6.0.11",
    "loguru>=0.7.3",
    "lxml>=6.0.1",
    "markdownify>=1.2.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.5",
    "trafilatura>=1.6.1",
]
