[project]
name = "read-later"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<4.0"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "feedparser>=6.0.11",
    "html2text>=2025.4.15",
    "loguru>=0.7.3",
    "lxml[html-clean]>=6.0.1",
    "markitdown>=0.1.3",
    "newspaper4k>=0.9.3.1",
    "pypandoc>=1.15",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
]
