[project]
name = "read-later"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<4.0"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "feedparser>=6.0.11",
    "gradio>=5.44.1",
    "html2text>=2025.4.15",
    "loguru>=0.7.3",
    "lxml[html-clean]>=6.0.1",
    "markitdown>=0.1.3",
    "newspaper4k>=0.9.3.1",
    "numpy>=2.3.2",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "pypandoc>=1.15",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.15.1",
    "requests>=2.32.5",
]
